fix duplicate of skills and tools sections, add iconsMap file for merge all icons

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,12 @@ html {
 
  
 
-body {
+/* body {
   @apply bg-gradient-to-br from-white to-indigo-50;
+  color: var(--color-text);
+} */
+body {
+  background-image: linear-gradient(to bottom right, #ffffff, #eef2ff);
   color: var(--color-text);
 }
 
