--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,13 @@
   --color-secondary: #372aac;
 }
 
-/* html {
-  scroll-behavior: smooth;
-} */
-
 /* body {
   @apply bg-gradient-to-br from-white to-indigo-50;
   color: var(--color-text);
 } */
 body {
-
-    background-color: #f8fafc;
+  background-color: #f8fafc;
+  /* background-image: linear-gradient(to bottom right, #ffffff, #eef2ff); */
 
   color: var(--color-text);
 }
