--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,13 @@
 }
 
 
+
+
+
 body {
   background-color: #f5f5f5;
-  /* background-image: linear-gradient(to bottom right, #ffffff, #eef2ff); */
-
   color: var(--color-text);
+  font-family: "Poppins",sans-serif;
 }
 
 @keyframes fade-up {
