add language btn

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 body {
   background-color: #f5f5f5;
   color: var(--color-text);
-  font-family: "Poppins",sans-serif;
+  font-family: "Poppins","Cairo",sans-serif;
 }
 
 @keyframes fade-up {
