--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,23 @@
   --color-secondary: #02866b; /* for btn and navbar hover and my name */
   --color-mobile-navbar: #f5f5f5; /* for mobile navbar background */
   --color-cards: #fbfbfb; /* for cards background */
+  --color-font: #000000; /* for text color */
+}
+
+.dark {
+  --color-bg: #282A36;
+  --color-text: #e0e0e0;
+  --color-navbar: #414258;
+  --color-secondary: #7764B0;
+  --color-mobile-navbar: #121212;
+  --color-cards: #282A36;
+  --color-font: #ffffff; /* for text color */
 }
 
 
 
-
-
 body {
-  background-color: #f5f5f5;
+  background-color: var(--color-bg);
   color: var(--color-text);
   font-family: "Poppins","Cairo",sans-serif;
 }
