--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   --color-navbar: #414258;
   --color-secondary: #7764B0;
   --color-mobile-navbar: #121212;
-  --color-cards: #282A36;
+  --color-cards: #414258;
   --color-font: #ffffff; /* for text color */
 }
 
